import { 
    ICadastroCliente,
    ICadastroRequest,
    ICadastroResponse,
    IIdentificacaoRequest,
    IIdentificacaoResponse
} from "@protobuf/cliente/service/cliente";

export {
    ICadastroCliente,
    ICadastroRequest,
    ICadastroResponse,
    IIdentificacaoRequest,
    IIdentificacaoResponse
};